parser/tests/snapshots/errors__if_no_body.snap
---
source: parser/tests/errors.rs
expression: err

---
error: failed to parse `if` statement body
  ┌─ [test snippet]:1:1
  │
1 │ if x:
  │ ^^^^^ the body of this `if` statement must be indented and non-empty


